--- a/bacc.html
+++ b/bacc.html
@@ -100,6 +100,15 @@
   </div>
   <br/>
 
+  <div style="text-align:center">
+    <span style="color:yellow">My Total: </span>
+    <span style="color:yellow" id="myChipTotal"></span>
+  </div>
+
+  <div class="horizontal-line">
+  </div>
+  <br/>
+
   <div id="theControls">
     <button id="aboutTheGame" onClick="explainTheGame()">About the Game (open the console)</button>
     <button id="shuffleButton" onClick="createShoe()">
@@ -108,7 +117,7 @@
     <button id="dealButton" onClick="dealAHand(theShoe, theDiscard)">
       Deal a Hand
     </button>
-    <span style="color:yellow">My Total: </span><span style="color:yellow" id="myChipTotal"></span>
+
   </div>
 
 </div>
