--- a/baccarat.html
+++ b/baccarat.html
@@ -110,11 +110,11 @@
   <br/>
 
   <div id="theControls">
-    <button id="aboutTheGame" onClick="explainTheGame()">About the Game (open the console)</button>
-    <button id="shuffleButton" onClick="createShoe()">
+    <button id="aboutTheGame">About the Game (open the console)</button>
+    <button id="shuffleButton">
       Shuffle the deck
     </button>
-    <button id="dealButton" onClick="dealAHand(theShoe, theDiscard)">
+    <button id="dealButton">
       Deal a Hand
     </button>
 
