--- a/baccarat.html
+++ b/baccarat.html
@@ -1,7 +1,7 @@
 <div>
 
   <div id="decoration">
-    <h1 style="text-align:center">
+    <h1 class="casinoName" >
       <span style="color:black">&spades;</span>
       <span style="color:red">&hearts;</span>
       <span style="color:black"> &clubs;</span>
